made some changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WDD 131-Dynamic web Fudamentals-Hinckley Ohaegbulem</title>
     <meta name="description" content="WDD 131- Dynamic website fudmentals at Byu-idaho.">
     <meta author="">
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="week1/styles/base.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap">
     <script src="scripts/getdates.js" defer=""></script>
 </head>
@@ -27,13 +27,13 @@
                 <h2>About Me</h2>
                 <div class="card-content-top">
                     <p>my name is Hinckley Ohaegbulem. i am from nigeria, and am currently studying Software at The Brigham Young University Idaho. I  love playing basketball⛹️‍♂️🏀 and video games 🎮. I am a member of the church of Jesus christ of Latter-day-Saints. I am in a family of six ,i have my lovely parents, with myself as the first born and 2 other brother and a sister who's is the third born. i love to learn and look for new things to improve myself i also love anythiny associated to technology especially coding.</p>
-                    <img src="image/myself.jpg" alt="photo Hinckley">
+                    <img src="week1/image/myself.jpg" alt="photo Hinckley">
                 </div>
                 <div class="country-info">
                     <h3>Nigeria, Africa</h3>
                     <div class="country-details">
                         <figure>
-                            <img src="image/nigeria logo.jpeg" alt="the logo of Nigeria">
+                            <img src="week1/image/nigeria logo.jpeg" alt="the logo of Nigeria">
                             <figcaption>Official Logo Of Nigeria</figcaption>
                         </figure>
                         <p>Nigeria is a large country in West Africa and the most populated nation in Africa. Its capital is Abuja, and the biggest city is Lagos. The country became independent from Britain on October 1, 1960. Nigeria has many ethnic groups, including the Hausa, Yoruba, and Igbo, and over 500 languages are spoken. It is rich in oil and natural resources and known for its music, movies, food, and culture. Although Nigeria faces challenges like corruption and unemployment, it remains a strong and important country in Africa.</p>
