--- a/index.html
+++ b/index.html
@@ -1,65 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131-Dynamic web Fudamentals-Hinckley Ohaegbulem</title>
-    <meta name="description" content="WDD 131- Dynamic website fudmentals at Byu-idaho.">
-    <meta author="">
-    <link rel="stylesheet" href="week1/styles/base.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap">
-    <script src="scripts/getdates.js" defer=""></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WDD 131: Dynamic Web Fundamentals – Hinckley Ohaegbulem</title>
+  <meta name="description" content="WDD 131: Dynamic Web Fundamentals at BYU–Idaho. A personal introduction page by Hinckley Ohaegbulem, featuring interests, background, and web development resources.">
+  <meta name="author" content="Hinckley Ohaegbulem">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="week1/styles/base.css">
+
+  <!-- JS -->
+  <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
-    <header>
-        <span id="course-title">WDD 131: Dynamic Web Fudamentals-Hinckley</span>
-    </header>
+  <header>
+    <span id="course-title">WDD 131: Dynamic Web Fundamentals – Hinckley Ohaegbulem</span>
     <nav>
-        <a href="https://www.linkedin.com/in/hinckley-ohaegbulem-615145282/" target="_blank">linkedin</a>
-        <a href="https://byupw.instructure.com/" target="_blank">Canvas</canvas></a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/31?lang=eng" target="_blank">Scriptures</a>
-        <a href="#">Final project</a>
+      <a href="https://www.linkedin.com/in/hinckley-ohaegbulem-615145282/" target="_blank">LinkedIn</a>
+      <a href="https://byupw.instructure.com/" target="_blank">Canvas</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/31?lang=eng" target="_blank">Scriptures</a>
+      <a href="#">Final Project</a>
     </nav>
-    <main>
-        <h1>Hinckley Ohaegbulem</h1>
-        <div class="main-content-grid">
-            <section class="card about-me-card">
-                <h2>About Me</h2>
-                <div class="card-content-top">
-                    <p>my name is Hinckley Ohaegbulem. i am from nigeria, and am currently studying Software at The Brigham Young University Idaho. I  love playing basketball⛹️‍♂️🏀 and video games 🎮. I am a member of the church of Jesus christ of Latter-day-Saints. I am in a family of six ,i have my lovely parents, with myself as the first born and 2 other brother and a sister who's is the third born. i love to learn and look for new things to improve myself i also love anythiny associated to technology especially coding.</p>
-                    <img src="week1/image/myself.jpg" alt="photo Hinckley">
-                </div>
-                <div class="country-info">
-                    <h3>Nigeria, Africa</h3>
-                    <div class="country-details">
-                        <figure>
-                            <img src="week1/image/nigeria logo.jpeg" alt="the logo of Nigeria">
-                            <figcaption>Official Logo Of Nigeria</figcaption>
-                        </figure>
-                        <p>Nigeria is a large country in West Africa and the most populated nation in Africa. Its capital is Abuja, and the biggest city is Lagos. The country became independent from Britain on October 1, 1960. Nigeria has many ethnic groups, including the Hausa, Yoruba, and Igbo, and over 500 languages are spoken. It is rich in oil and natural resources and known for its music, movies, food, and culture. Although Nigeria faces challenges like corruption and unemployment, it remains a strong and important country in Africa.</p>
-                    </div>
-                </div>
-            </section>
-            <section class="card-web-resources">
-                <h2>Web Dev Resources</h2>
-                <ul>
-                    <li>
-                        <a href="https://www.w3schools.com/">w3schools</a>
-                    </li>
-                    <li>
-                        <a href="https://www.freecodecamp.org/">freecodeCamp</a>
-                    </li>
-                    <li><a href="https://www.khanacademy.org/">khanacademy</a></li>
-                    <li><a href="https://www.codecademy.com/pages/paid-plans">codeacademy</a></li>
-                    <li><a href="https://www.theknowledgeacademy.com/ng/offers/coding-certification-training-courses/?utm_term=Coding%20Training&utm_campaign=%5BCoding%5D%5BNigeria%5D&utm_source=bing&utm_medium=ppc&hsa_acc=9793286144&hsa_cam=16607212726&hsa_grp=1304021162334728&hsa_ad=&hsa_src=o&hsa_tgt=kwd-81501514578156:loc-137&hsa_kw=Coding%20Training&hsa_mt=p&hsa_net=adwords&hsa_ver=3&msclkid=c14f2424b01d1b3b493a4d255f693d50&utm_content=%5BCoding%5D%5BTraining%5D">theknowledgeacademy</a></li>
-                </ul>
-            </section>
+  </header>
 
+  <main>
+    <h1>Hinckley Ohaegbulem</h1>
+    <div class="main-content-grid">
+      <section class="card about-me-card">
+        <h2>About Me</h2>
+        <div class="card-content-top">
+          <p>My name is Hinckley Ohaegbulem. I am from Nigeria and currently studying Software Development at Brigham Young University–Idaho. I love playing basketball ⛹️‍♂️🏀 and video games 🎮. I’m a member of the Church of Jesus Christ of Latter-day Saints. I come from a family of six, and I’m the firstborn. I enjoy learning new things, improving myself, and exploring technology—especially coding.</p>
+          <img src="week1/image/myself.jpg" alt="Photo of Hinckley Ohaegbulem">
         </div>
-    </main>
-    <footer>
-        <p>© Current Date and Time: <span id="currentDateTime">29/10/2025, 13:15:52</span> | By Hinckley Ohaegbulem</p>
-        <p id="lastModified">10/29/2025 13:05:15</p></p>
-      </footer>      
+        <div class="country-info">
+          <h3>Nigeria, Africa</h3>
+          <div class="country-details">
+            <figure>
+              <img src="week1/image/nigeria _logo.jpeg" alt="The official logo of Nigeria">
+              <figcaption>Official Logo of Nigeria</figcaption>
+            </figure>
+            <p>Nigeria is a large country in West Africa and the most populated nation in Africa. Its capital is Abuja, and the biggest city is Lagos. The country became independent from Britain on October 1, 1960. Nigeria has many ethnic groups, including the Hausa, Yoruba, and Igbo, and over 500 languages are spoken. It is rich in oil and natural resources and known for its music, movies, food, and culture. Although Nigeria faces challenges like corruption and unemployment, it remains a strong and important country in Africa.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="card card-web-resources">
+        <h2>Web Dev Resources</h2>
+        <ul>
+          <li><a href="https://www.w3schools.com/">W3Schools</a></li>
+          <li><a href="https://www.freecodecamp.org/">FreeCodeCamp</a></li>
+          <li><a href="https://www.khanacademy.org/">Khan Academy</a></li>
+          <li><a href="https://www.codecademy.com/">Codecademy</a></li>
+          <li><a href="https://www.theknowledgeacademy.com/ng/offers/coding-certification-training-courses/">The Knowledge Academy</a></li>
+        </ul>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <p>© Current Date and Time: <span id="currentDateTime">29/10/2025, 14:51</span> | By Hinckley Ohaegbulem</p>
+    <p id="lastModified">lastModified : 29/10/2025, 14:51</p>
+  </footer>
 </body>
 </html>
