--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="week1/styles/base.css">
+  <link rel="stylesheet" href="styles/base.css">
 
   <!-- JS -->
   <script src="scripts/getdates.js" defer></script>
@@ -36,13 +36,13 @@
         <h2>About Me</h2>
         <div class="card-content-top">
           <p>My name is Hinckley Ohaegbulem. I am from Nigeria and currently studying Software Development at Brigham Young University–Idaho. I love playing basketball ⛹️‍♂️🏀 and video games 🎮. I’m a member of the Church of Jesus Christ of Latter-day Saints. I come from a family of six, and I’m the firstborn. I enjoy learning new things, improving myself, and exploring technology—especially coding.</p>
-          <img src="week1/image/myself.jpg" alt="Photo of Hinckley Ohaegbulem">
+          <img src="image/myself.jpg" alt="Photo of Hinckley Ohaegbulem">
         </div>
         <div class="country-info">
           <h3>Nigeria, Africa</h3>
           <div class="country-details">
             <figure>
-              <img src="week1/image/nigeria _logo.jpeg" alt="The official logo of Nigeria">
+              <img src="image/nigeria_logo.jpeg" alt="The official logo of Nigeria">
               <figcaption>Official Logo of Nigeria</figcaption>
             </figure>
             <p>Nigeria is a large country in West Africa and the most populated nation in Africa. Its capital is Abuja, and the biggest city is Lagos. The country became independent from Britain on October 1, 1960. Nigeria has many ethnic groups, including the Hausa, Yoruba, and Igbo, and over 500 languages are spoken. It is rich in oil and natural resources and known for its music, movies, food, and culture. Although Nigeria faces challenges like corruption and unemployment, it remains a strong and important country in Africa.</p>
