changes were made

--- a/temples.html
+++ b/temples.html
@@ -62,7 +62,7 @@
         <figcaption>Columbia River Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/durban southafrica temple.jpg" alt="Durban South Africa Temple">
+        <img src="image/durban-southafrica-temple.jpg" alt="Durban South Africa Temple">
         <figcaption>Durban South Africa Temple</figcaption>
       </figure>
       <figure>
