--- a/temples.html
+++ b/temples.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Temple Album</title>
-  <meta name="description" content="WDD 131: Dynamic Web Fundamentals at BYU–Idaho. A personal introduction page by Hinckley Ohaegbulem, featuring temple images and responsive design.">
-  <meta name="author" content="Hinckley Ohaegbulem">
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="styles/temple.css">
-
-  <!-- JS -->
-  <script src="scripts/temples.js" defer></script>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Temple Album</title>
+    <meta name="description" content="WDD 131: Dynamic Web Fundamentals at BYU–Idaho. A personal introduction page by Hinckley Ohaegbulem, featuring interests, background, and web development resources.">
+    <meta name="author" content="Hinckley Ohaegbulem">
+  
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  
+    <!-- ✅ Correct CSS Links -->
+    <link rel="stylesheet" href="styles/temple.css">
+    <link rel="stylesheet" href="styles/temple-large .css">
+  
+    <!-- ✅ JavaScript -->
+    <script src="scripts/temples.js" defer></script>
+  </head>
+  
 <body>
   <header>
     <h1 class="nameholder">Temple Album</h1>
