--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple Album</title>
-    <meta name="description" content="WDD 131: Dynamic Web Fundamentals at BYU–Idaho. A personal introduction page by Hinckley Ohaegbulem, featuring interests, background, and web development resources.">
+    <meta name="description" content="WDD 131: Dynamic Web Fundamentals project by Hinckley Ohaegbulem — a personal Temple Album featuring interests and web projects.">
+
     <meta name="author" content="Hinckley Ohaegbulem">
   
     <!-- Google Fonts -->
@@ -14,7 +15,7 @@
   
     <!-- ✅ Correct CSS Links -->
     <link rel="stylesheet" href="styles/temple.css">
-    <link rel="stylesheet" href="styles/temple-large .css">
+    <link rel="stylesheet" href="styles/temple-large.css">
   
     <!-- ✅ JavaScript -->
     <script src="scripts/temples.js" defer></script>
@@ -40,27 +41,27 @@
     <h2 class="home">Home</h2>
     <div class="container home">
       <figure>
-        <img src="image/02-Billings-Montana-Temple-1572044.jpg" alt="Billings Montana Temple">
+        <img src="image/02-Billings-Montana-Temple.jpg" alt="Billings Montana Temple">
         <figcaption>Billings Montana Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/aba-nigeria-temple-lds-273999-wallpaper.jpg" alt="Aba Nigeria Temple">
+        <img src="image/aba-nigeria-temple.jpg" alt="Aba Nigeria Temple">
         <figcaption>Aba Nigeria Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/albuquerque-temple-lds-137883-wallpaper.jpg" alt="Albuquerque Temple">
+        <img src="image/albuquerque-temple.jpg" alt="Albuquerque Temple">
         <figcaption>Albuquerque Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/belem_brazil_temple_exterior2.jpg" alt="Belem Brazil Temple">
+        <img src="image/belem_brazil_temple.jpg" alt="Belem Brazil Temple">
         <figcaption>Belem Brazil Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/Chicago-Temple_0750.jpg" alt="Chicago Temple">
+        <img src="image/chicago-Temple.jpg" alt="Chicago Temple">
         <figcaption>Chicago Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/columbia-river-temple-lds-130323-wallpaper.jpg" alt="Columbia River Temple">
+        <img src="image/columbia-river-temple.jpg" alt="Columbia River Temple">
         <figcaption>Columbia River Temple</figcaption>
       </figure>
       <figure>
@@ -68,11 +69,11 @@
         <figcaption>Durban South Africa Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/kona-hawaii-temple-lds-912837-wallpaper.jpg" alt="Kona Hawaii Temple">
+        <img src="image/kona-hawaii-temple.jpg" alt="Kona Hawaii Temple">
         <figcaption>Kona Hawaii Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/newport-beach-temple-766334-wallpaper.jpg" alt="Newport Beach Temple">
+        <img src="image/newport-beach-temple.jpg" alt="Newport Beach Temple">
         <figcaption>Newport Beach Temple</figcaption>
       </figure>
     </div>
