changes were made in the html and images

--- a/temples.html
+++ b/temples.html
@@ -3,19 +3,31 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Album</title>
-    <meta name="description" content="WDD 131: Dynamic Web Fundamentals project by Hinckley Ohaegbulem — a personal Temple Album featuring interests and web projects.">
-
+    <title>Temple Album | Hinckley Ohaegbulem</title>
+  
+    <!-- ✅ SEO Meta Description (under 160 chars) -->
+    <meta name="description" content="Temple Album by Hinckley Ohaegbulem for WDD 131: Dynamic Web Fundamentals at BYU–Idaho. Explore beautiful temple images.">
+  
+    <!-- ✅ Author -->
     <meta name="author" content="Hinckley Ohaegbulem">
   
-    <!-- Google Fonts -->
+    <!-- ✅ Keywords for SEO -->
+    <meta name="keywords" content="Temple Album, WDD 131, Hinckley Ohaegbulem, BYU–Idaho, web development, photo gallery, responsive design">
+  
+    <!-- ✅ Social Preview (Optional but boosts SEO) -->
+    <meta property="og:title" content="Temple Album by Hinckley Ohaegbulem">
+    <meta property="og:description" content="A responsive Temple Album project created for WDD 131 at BYU–Idaho.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="image/aba-nigeria-temple-lds-273999-wallpaper.jpg">
+  
+    <!-- ✅ Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   
-    <!-- ✅ Correct CSS Links -->
-    <link rel="stylesheet" href="styles/temple.css">
-    <link rel="stylesheet" href="styles/temple-large.css">
+    <!-- ✅ Required CSS Files (to fix your missing file errors) -->
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temples-large.css">
   
     <!-- ✅ JavaScript -->
     <script src="scripts/temples.js" defer></script>
