changes mand in the images , html and css

--- a/temples.html
+++ b/temples.html
@@ -26,8 +26,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   
     <!-- ✅ Required CSS Files (to fix your missing file errors) -->
-    <link rel="stylesheet" href="styles/temples.css">
-    <link rel="stylesheet" href="styles/temples-large.css">
+    <link rel="stylesheet" href="styles/temple.css">
+    <link rel="stylesheet" href="styles/temple-large.css">
   
     <!-- ✅ JavaScript -->
     <script src="scripts/temples.js" defer></script>
@@ -53,7 +53,7 @@
     <h2 class="home">Home</h2>
     <div class="container home">
       <figure>
-        <img src="image/02-Billings-Montana-Temple.jpg" alt="Billings Montana Temple">
+        <img src="image/billings-montana-Temple.jpg" alt="Billings Montana Temple">
         <figcaption>Billings Montana Temple</figcaption>
       </figure>
       <figure>
