changes where  made

--- a/temples.html
+++ b/temples.html
@@ -69,7 +69,7 @@
         <figcaption>Belem Brazil Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/chicago-Temple.jpg" alt="Chicago Temple">
+        <img src="image/chicago-temple.jpg" alt="Chicago Temple">
         <figcaption>Chicago Temple</figcaption>
       </figure>
       <figure>
