--- a/temples.html
+++ b/temples.html
@@ -53,7 +53,7 @@
     <h2 class="home">Home</h2>
     <div class="container home">
       <figure>
-        <img src="image/billingsmontana-temple.jpg" alt="Billings Montana Temple">
+        <img src="image/billings-montana-temple.jpg" alt="Billings Montana Temple">
         <figcaption>Billings Montana Temple</figcaption>
       </figure>
       <figure>
@@ -69,7 +69,7 @@
         <figcaption>Belem Brazil Temple</figcaption>
       </figure>
       <figure>
-        <img src="image/chicago-temple.jpg" alt="Chicago Temple">
+        <img src="image/chicago's-temple.jpg" alt="Chicago Temple">
         <figcaption>Chicago Temple</figcaption>
       </figure>
       <figure>
