--- a/filtered-temple.html
+++ b/filtered-temple.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Album | Hinckley Ohaegbulem</title>
+    <title>Filtered Temple Album | Hinckley Ohaegbulem</title>
   
     <!-- ✅ SEO Meta Description (under 160 chars) -->
     <meta name="description" content="Temple Album by Hinckley Ohaegbulem for WDD 131: Dynamic Web Fundamentals at BYU–Idaho. Explore beautiful temple images.">
