changes made in the html , css and js

--- a/filtered-temple.html
+++ b/filtered-temple.html
@@ -4,27 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Temple Album | Hinckley Ohaegbulem</title>
-
-  <!-- SEO Meta -->
   <meta name="description" content="Temple Album by Hinckley Ohaegbulem for WDD 131: Dynamic Web Fundamentals at BYU–Idaho. Explore beautiful temple images.">
   <meta name="author" content="Hinckley Ohaegbulem">
   <meta name="keywords" content="Temple Album, WDD 131, Hinckley Ohaegbulem, BYU–Idaho, web development, photo gallery, responsive design">
-
-  <!-- Social Preview -->
   <meta property="og:title" content="Temple Album by Hinckley Ohaegbulem">
   <meta property="og:description" content="A responsive Temple Album project created for WDD 131 at BYU–Idaho.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="image/aba-nigeria-temple-lds-273999-wallpaper.jpg">
+  <meta property="og:image" content="image/aba-nigeria-temple.jpg">
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="styles/temple.css">
 
-  <!-- JS -->
   <script src="scripts/temples.js" defer></script>
 </head>
 <body>
@@ -43,9 +35,7 @@
   </header>
 
   <main>
-    <div class="container" id="templeContainer">
-      <!-- JS will dynamically insert temple cards here -->
-    </div>
+    <div class="container" id="templeContainer"></div>
   </main>
 
   <footer>
